Added a more fun landing page for the meanwhile

--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
         <title>Steven Zilberberg</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
-        <h1>Steven Zilberberg</h1>
-        <p>Hi, yes, this is me</p>
+        <div class="banner">
+            <h1>Steven Zilberberg</h1>
+            <p>Hi, yes, this is me</p>
+        </div>
+        <article>
+            <h2>I finally got my website back</h2>
+            <div class="gif">
+                <img src="assets/yes.gif" alt="The Office Jim Saying Yes">
+            </div>
+            <p>
+                Its been a long while but I finally got things linked correctly to get my domain back pointing at something.
+                I am hoping to build this build into an actual professional looking thing. Time will tell.
+            </p>
+        </article>
+        <footer>
+            <p>Follow this project this on <a href="https://www.github.com/srz2/stevenzilberberg.com" />Github🤖</p>
+        </footer>
         <script src="" async defer></script>
     </body>
 </html>
