--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="banner">
             <h1>Steven Zilberberg</h1>
-            <p>Hi, yes, this is me</p>
+            <p>Hi, yes, this is me!</p>
         </div>
         <article>
             <h2>I finally got my website back</h2>
