Added to message

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </div>
             <p>
                 Its been a long while but I finally got things linked correctly to get my domain back pointing at something.
-                I am hoping to build this build into an actual professional looking thing. Time will tell.
+                I am hoping to build this into an actual professional looking thing, but for now, this will suffice. Time will tell.
             </p>
         </article>
         <footer>
-            <p>Follow this project this on <a href="https://www.github.com/srz2/stevenzilberberg.com" />Github🤖</p>
+            <p>Follow this project on <a href="https://www.github.com/srz2/stevenzilberberg.com" />Github🤖</p>
         </footer>
         <script src="" async defer></script>
     </body>
