Implemented font awesome icons for tiles

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,6 +10,7 @@
         <title>Steven Zilberberg</title>
         <meta name="description" content="This is the personal and professional website of Steven Zilberberg">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://kit.fontawesome.com/47a6fa9b7d.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/index.css">
     </head>
@@ -35,25 +36,25 @@
             <div class="link-area">
                     <div class="link-item">
                         <a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">
-                            <img src="assets/linkedin.svg">
+                            <i class="fa-item fa-brands fa-linkedin"></i>
                             <p>Linkedin</p>
                         </a>
                     </div>
                     <div class="link-item">
                         <a target="_blank" href="http://www.github.com/srz2">
-                            <img src="assets/github.svg">
+                            <i class="fa-item fa-brands fa-github"></i>
                             <p>Github</p>
                         </a>
                     </div>
                     <div class="link-item">
                         <a target="_blank" href="mailto:srz222@gmail.com">
-                            <img src="assets/envelope-solid.svg">
+                            <i class="fa-item fa-solid fa-envelope"></i>
                             <p>Email</p>
                         </a>
                     </div>
                     <div class="link-item">
                         <a target="_blank" href="./assets/20221230-Zilberberg, Steven-Resume.pdf">
-                            <img src="assets/file-solid.svg">
+                            <i class="fa-item fa-solid fa-file"></i>
                             <p>Resume</p>
                         </a>
                     </div>
