Fixed spelling mistake

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -28,7 +28,7 @@
                         <li>Engineer</li>
                         <li>Tech Savvy</li>
                         <li>Passionate</li>
-                        <li>Self Modivated</li>
+                        <li>Self Motivated</li>
                     </ul>
                 </div>
             </div>
