--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="This is the personal and professional website of Steven Zilberberg">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/47a6fa9b7d.js" crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cousine&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
