Fixed background image to use icons instead

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -21,7 +21,14 @@
 
         <div class="content-container">
             <div class="title-area">
-                <img src="assets/temp-cover-photo.jpg" alt="Coding like cover photo">
+                <div class="banner">
+                    <div class="banner-items">
+                        <i class="fa-solid fa-computer"></i>
+                        <i class="fa-solid fa-code"></i>
+                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-sharp fa-bug"></i>
+                    </div>
+                </div>
                 <div class="overlay-content">
                     <h1>Steven Zilberberg</h1>
                     <ul>
