Made site mobile friendly

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -43,26 +43,34 @@
             <div class="link-area">
                     <div class="link-item">
                         <a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">
-                            <i class="fa-item fa-brands fa-linkedin"></i>
-                            <p>Linkedin</p>
+                            <div class="link-item-content">
+                                <i class="fa-item fa-brands fa-linkedin"></i>
+                                <p>Linkedin</p>
+                            </div>
                         </a>
                     </div>
                     <div class="link-item">
                         <a target="_blank" href="http://www.github.com/srz2">
-                            <i class="fa-item fa-brands fa-github"></i>
-                            <p>Github</p>
+                            <div class="link-item-content">
+                                <i class="fa-item fa-brands fa-github"></i>
+                                <p>Github</p>
+                            </div>
                         </a>
                     </div>
                     <div class="link-item">
                         <a target="_blank" href="mailto:srz222@gmail.com">
-                            <i class="fa-item fa-solid fa-envelope"></i>
-                            <p>Email</p>
+                            <div class="link-item-content">
+                                <i class="fa-item fa-solid fa-envelope"></i>
+                                <p>Email</p>
+                            </div>
                         </a>
                     </div>
                     <div class="link-item">
                         <a target="_blank" href="./assets/20221230-Zilberberg, Steven-Resume.pdf">
-                            <i class="fa-item fa-solid fa-file"></i>
-                            <p>Resume</p>
+                            <div class="link-item-content">
+                                <i class="fa-item fa-solid fa-file"></i>
+                                <p>Resume</p>
+                            </div>
                         </a>
                     </div>
             </div>
@@ -76,7 +84,6 @@
                         </ul>
                     </div>
                     <div class="message">
-                        <p>Tech Savvy, Passionate, Engineer</p>
                         <a href="./assets/20221230-Zilberberg, Steven-Resume.pdf">Resume</a>
                     </div>
                 </footer>
