--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -78,13 +78,19 @@
                 <footer>
                     <div class="info">
                         <ul>
-                            <p>Person: Steven Zilberberg</p>
-                            <p>Place: stevenzilberberg.com</p>
-                            <p>Thing: Copyright &copy; 2022</p>
+                            <p>Steven Zilberberg</p>
+                            <p>Computer Engineering</p>
+                            <p>stevenzilberberg.com</p>
+                            <p>Copyright &copy; 2022</p>
                         </ul>
                     </div>
                     <div class="message">
-                        <a href="./assets/20221230-Zilberberg, Steven-Resume.pdf">Resume</a>
+                        <ul>
+                            <li><a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">Linkedin</a></li>
+                            <li><a target="_blank" href="http://www.github.com/srz2">Github</a></li>
+                            <li><a target="_blank" href="mailto:srz222@gmail.com">Contact</a></li>
+                            <li><a target="_blank" href="./assets/20221230-Zilberberg, Steven-Resume.pdf">Resume</a></li>
+                        </ul>
                     </div>
                 </footer>
             </div>
