updated footer link class

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -84,7 +84,7 @@
                             <p>Copyright &copy; 2022</p>
                         </ul>
                     </div>
-                    <div class="message">
+                    <div class="site-map-container">
                         <ul>
                             <li><a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">Linkedin</a></li>
                             <li><a target="_blank" href="http://www.github.com/srz2">Github</a></li>
