--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </div>
                     <div class="link-item">
-                        <a target="_blank" href="./assets/20230303-Zilberberg, Steven-Resume.pdf">
+                        <a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231217.pdf">
                             <div class="link-item-content">
                                 <i class="fa-item fa-solid fa-file"></i>
                                 <p>Resume</p>
