--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </div>
                     <div class="link-item">
-                        <a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231217.pdf">
+                        <a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231218.pdf">
                             <div class="link-item-content">
                                 <i class="fa-item fa-solid fa-file"></i>
                                 <p>Resume</p>
@@ -89,7 +89,7 @@
                             <li><a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">Linkedin</a></li>
                             <li><a target="_blank" href="http://www.github.com/srz2">Github</a></li>
                             <li><a target="_blank" href="mailto:srz222@gmail.com">Contact</a></li>
-                            <li><a target="_blank" href="./assets/20221230-Zilberberg, Steven-Resume.pdf">Resume</a></li>
+                            <li><a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231218.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </footer>
