Added weblink to website name

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -80,7 +80,7 @@
                         <ul>
                             <p>Steven Zilberberg</p>
                             <p>Computer Engineering</p>
-                            <p>stevenzilberberg.com</p>
+                            <p><a href="https://stevenzilberberg.com">stevenzilberberg.com</a></p>
                             <p>Copyright &copy; 2022</p>
                         </ul>
                     </div>
