Implemented modal for showing additional text for attributes

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -13,11 +13,24 @@
         <script src="https://kit.fontawesome.com/47a6fa9b7d.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cousine&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/index.css">
+        <link rel="stylesheet" href="styles/modal.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <div id="attributeModal" class="modal modal-hidden">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Incidunt aut omnis tempore minima corrupti quasi ducimus
+                    officia illum est commodi, iure, labore sapiente, blanditiis
+                    nesciunt molestias aperiam? Id, enim. Placeat?
+                </p>
+            </div>
+        </div>
 
         <div class="content-container">
             <div class="title-area">
@@ -95,7 +108,6 @@
                 </footer>
             </div>
         </div>
-
         <script src="js/index.js" async defer></script>
     </body>
 </html>
