Added projects path and fixed tabbing

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -54,38 +54,46 @@
             </div>
     
             <div class="link-area">
-                    <div class="link-item">
-                        <a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">
-                            <div class="link-item-content">
-                                <i class="fa-item fa-brands fa-linkedin"></i>
-                                <p>Linkedin</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="link-item">
-                        <a target="_blank" href="http://www.github.com/srz2">
-                            <div class="link-item-content">
-                                <i class="fa-item fa-brands fa-github"></i>
-                                <p>Github</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="link-item">
-                        <a target="_blank" href="mailto:srz222@gmail.com">
-                            <div class="link-item-content">
-                                <i class="fa-item fa-solid fa-envelope"></i>
-                                <p>Email</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="link-item">
-                        <a target="_blank" href="./assets/20240126-Zilberberg, Steven-Resume.pdf">
-                            <div class="link-item-content">
-                                <i class="fa-item fa-solid fa-file"></i>
-                                <p>Resume</p>
-                            </div>
-                        </a>
-                    </div>
+                <div class="link-item">
+                    <a href="projects">
+                        <div class="link-item-content">
+                            <i class="fa-item fa-solid fa-folder-tree"></i>
+                            <p>Projects</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">
+                        <div class="link-item-content">
+                            <i class="fa-item fa-brands fa-linkedin"></i>
+                            <p>Linkedin</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a target="_blank" href="http://www.github.com/srz2">
+                        <div class="link-item-content">
+                            <i class="fa-item fa-brands fa-github"></i>
+                            <p>Github</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a target="_blank" href="mailto:srz222@gmail.com">
+                        <div class="link-item-content">
+                            <i class="fa-item fa-solid fa-envelope"></i>
+                            <p>Email</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a target="_blank" href="./assets/20240126-Zilberberg, Steven-Resume.pdf">
+                        <div class="link-item-content">
+                            <i class="fa-item fa-solid fa-file"></i>
+                            <p>Resume</p>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class="footer">
                 <footer>
