Created loading text for projects

--- a/src/frontend/projects/index.html
+++ b/src/frontend/projects/index.html
@@ -39,6 +39,9 @@
                 </div>
                 <main>
                     <div class="card-container">
+                        <div id="loading">
+                            <h1>Dynamically Loading Content from Github...</h1>
+                        </div>
                         <!-- <div class="card">
                             <h1>Cool Project</h1>
                             <div class="img-container">
