Moved incorrectly place script tag

--- a/src/frontend/projects/index.html
+++ b/src/frontend/projects/index.html
@@ -77,9 +77,9 @@
                             <li><a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231218.pdf">Resume</a></li>
                         </ul>
                     </div>
-                    <script src="../js/github.js"></script>
                 </footer>
             </div>
         </div>
+        <script defer src="../js/github.js"></script>
     </body>
 </html>
