Added green background to project page

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
     
-            <div class="link-area">
+            <div class="link-area content">
                 <div class="link-item">
                     <a href="projects">
                         <div class="link-item-content">
