--- a/src/frontend/projects/index.html
+++ b/src/frontend/projects/index.html
@@ -30,7 +30,7 @@
                     </ul>
                 </div>
             </div>
-            <main>
+            <main class="content">
                 <div class="back-control">
                     <a href="..">
                         <i class="back-arrow fa-solid fa-arrow-left"></i>
