Added tutoring section

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -55,6 +55,14 @@
     
             <div class="link-area content">
                 <div class="link-item">
+                    <a href="tutoring">
+                        <div class="link-item-content">
+                            <i class="fa-item fa-solid fa-graduation-cap"></i>
+                            <p>Tutoring</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="link-item">
                     <a href="projects">
                         <div class="link-item-content">
                             <i class="fa-item fa-solid fa-folder-tree"></i>
