Fixed spacing for mobile

--- a/src/frontend/tutoring/index.html
+++ b/src/frontend/tutoring/index.html
@@ -51,9 +51,11 @@
                         <p>I can help you understand languages and frameworks</p>
                         <ul class="col-3">
                             <li>Python</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
                             <li>C/C++</li>
                             <li>C#</li>
-                            <li>Html/CSS/Javascript</li>
                             <li>React</li>
                             <li>Angular</li>
                             <li>NodeJs</li>
