Updated resume references and resume to current

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -54,7 +54,7 @@
             </div>
     
             <div class="link-area content">
-                <div class="link-item">
+                <div hidden class="link-item">
                     <a href="tutoring">
                         <div class="link-item-content">
                             <i class="fa-item fa-solid fa-graduation-cap"></i>
@@ -95,7 +95,7 @@
                     </a>
                 </div>
                 <div class="link-item">
-                    <a target="_blank" href="./assets/20240126-Zilberberg, Steven-Resume.pdf">
+                    <a target="_blank" href="./assets/Zilberberg, Steven-Resume_20250304.pdf">
                         <div class="link-item-content">
                             <i class="fa-item fa-solid fa-file"></i>
                             <p>Resume</p>
@@ -118,7 +118,7 @@
                             <li><a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">Linkedin</a></li>
                             <li><a target="_blank" href="http://www.github.com/srz2">Github</a></li>
                             <li><a target="_blank" href="mailto:srz222@gmail.com">Contact</a></li>
-                            <li><a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231218.pdf">Resume</a></li>
+                            <li><a target="_blank" href="./assets/Zilberberg, Steven-Resume_20250304.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </footer>
