--- a/src/frontend/tutoring/index.html
+++ b/src/frontend/tutoring/index.html
@@ -80,7 +80,7 @@
                             <li><a target="_blank" href="http://www.linkedin.com/in/steven-zilberberg">Linkedin</a></li>
                             <li><a target="_blank" href="http://www.github.com/srz2">Github</a></li>
                             <li><a target="_blank" href="mailto:srz222@gmail.com">Contact</a></li>
-                            <li><a target="_blank" href="./assets/Zilberberg, Steven-Resume-20231218.pdf">Resume</a></li>
+                            <li><a target="_blank" href="../assets/Zilberberg, Steven-Resume_20250304.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </footer>
